fix(deployment - label name)

--- a/deploy/02-deployment-server.yaml
+++ b/deploy/02-deployment-server.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: server
+        app: quota-management-server
     spec:
       containers:
       - name: server
