feat(switcher to production wsgi server)

--- a/deploy/02-deployment-server.yaml
+++ b/deploy/02-deployment-server.yaml
@@ -29,6 +29,7 @@ spec:
           mountPath: "/app/scheme.json"
           subPath: "scheme.json"
           readOnly: true
+        imagePullPolicy: Always
       volumes:
       - name: scheme
         configMap:
