--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,13 @@
 FROM python:3
+
+# general
 EXPOSE 5000
 WORKDIR /app
 
-# get python dependencies
-COPY . .
+# python dependencies
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 # run server
+COPY server.py ./
 CMD [ "./server.py" ]
