--- a/deploy/02-deployment-server.yaml
+++ b/deploy/02-deployment-server.yaml
@@ -19,6 +19,10 @@ spec:
         image: docker.io/vladpbr/quota-management-server:1.0
         ports:
         - containerPort: 5000
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: ".1"
         env:
         - name: QUOTA_SCHEME_FILE
           value: "/app/scheme.json"
