feat(template, cors, authentication)

--- a/client/app/nginx.conf
+++ b/client/app/nginx.conf
@@ -23,6 +23,7 @@ http {
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
+            add_header 'Access-Control-Allow-Origin' '*';
         }
 
         access_log  /dev/stdout;
