--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12.4.0-alpine as build
+FROM docker.io/library/node:12.4.0-alpine as build
 WORKDIR /app
 COPY package.json .
 RUN npm install
