feat(namespace list rbac)

--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -79,6 +79,12 @@ objects:
     - tokenreviews
     verbs:
     - create
+  - apiGroups:
+    - ""
+    resources:
+    - namespaces
+    verbs:
+    - list
 - apiVersion: rbac.authorization.k8s.io/v1
   kind: ClusterRoleBinding
   metadata:
