feat(permissions, cors methods, UI, regex description)

--- a/client/app/nginx.conf
+++ b/client/app/nginx.conf
@@ -24,6 +24,7 @@ http {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET';
         }
 
         access_log  /dev/stdout;
