--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -25,19 +25,22 @@ objects:
                   "name": "Pods",
                   "description": "The total number of pods in a non-terminal state that can exist in the project.",
                   "units": "",
-                  "regex": "^\\d+$"
+                  "regex": "^\\d+$",
+                  "regex_description": "Must be a whole non-negative number"
               },
               "requests.cpu": {
                   "name": "CPU Cores",
                   "description": "The sum of CPU requests across all pods in a non-terminal state cannot exceed this value.",
                   "units": "",
-                  "regex": "^\\d*\\.?\\d*$"
+                  "regex": "^\\d*\\.?\\d*$",
+                  "regex_description": "Must be a floating point non-negative number"
               },
               "requests.memory": {
                   "name": "Memory",
                   "description": "The sum of memory requests across all pods in a non-terminal state cannot exceed this value.",
                   "units": "Gi",
-                  "regex": "^\\d*\\.?\\d*$"
+                  "regex": "^\\d*\\.?\\d*$",
+                  "regex_description": "Must be a floating point non-negative number"
               }
           },
           "storage": {
@@ -45,13 +48,15 @@ objects:
                   "name": "Storage",
                   "description": "The sum of storage requests across all persistent volume claims in any state cannot exceed this value.",
                   "units": "Gi",
-                  "regex": "^\\d*\\.?\\d*$"
+                  "regex": "^\\d*\\.?\\d*$",
+                  "regex_description": "Must be a floating point non-negative number"
               },
               "persistentvolumeclaims": {
                   "name": "Persistent Volume Claims",
                   "description": "The total number of persistent volume claims that can exist in the project.",
                   "units": "",
-                  "regex": "^\\d+$"
+                  "regex": "^\\d+$",
+                  "regex_description": "Must be a whole non-negative number"
               }
           }
       }
@@ -85,6 +90,12 @@ objects:
     - namespaces
     verbs:
     - list
+  - apiGroups:
+    - ""
+    resources:
+    - resourcequotas
+    verbs:
+    - update
 - apiVersion: rbac.authorization.k8s.io/v1
   kind: ClusterRoleBinding
   metadata:
