feat(final touches)

--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -23,21 +23,18 @@ objects:
           "compute": {
               "pods": {
                   "name": "Pods",
-                  "description": "The total number of pods in a non-terminal state that can exist in the project.",
                   "units": "",
                   "regex": "^\\d+$",
                   "regex_description": "Must be a whole non-negative number"
               },
               "requests.cpu": {
                   "name": "CPU Cores",
-                  "description": "The sum of CPU requests across all pods in a non-terminal state cannot exceed this value.",
                   "units": "",
                   "regex": "^\\d*\\.?\\d*$",
                   "regex_description": "Must be a floating point non-negative number"
               },
               "requests.memory": {
                   "name": "Memory",
-                  "description": "The sum of memory requests across all pods in a non-terminal state cannot exceed this value.",
                   "units": "Gi",
                   "regex": "^\\d*\\.?\\d*$",
                   "regex_description": "Must be a floating point non-negative number"
@@ -46,14 +43,12 @@ objects:
           "storage": {
               "requests.storage": {
                   "name": "Storage",
-                  "description": "The sum of storage requests across all persistent volume claims in any state cannot exceed this value.",
                   "units": "Gi",
                   "regex": "^\\d*\\.?\\d*$",
                   "regex_description": "Must be a floating point non-negative number"
               },
               "persistentvolumeclaims": {
                   "name": "Persistent Volume Claims",
-                  "description": "The total number of persistent volume claims that can exist in the project.",
                   "units": "",
                   "regex": "^\\d+$",
                   "regex_description": "Must be a whole non-negative number"
@@ -142,7 +137,7 @@ objects:
           - name: BACKEND_ROUTE
             value: "https://quota-management-server.${ROUTER_CANONICAL_HOSTNAME}"
           - name: OAUTH_ENDPOINT
-            value: "https://oauth-openshift.${ROUTER_CANONICAL_HOSTNAME}"
+            value: "https://${OAUTH_ENDPOINT}"
           - name: OAUTH_CLIENT_ID
             value: "${CLIENT_ID}"
           imagePullPolicy: Always
@@ -266,6 +261,9 @@ parameters:
 - description: Client ID for the UI to use
   value: quota-management
   name: CLIENT_ID
+  required: true
+- description: Endpoint to use for authentication
+  name: OAUTH_ENDPOINT
   required: true
 - description: Label which should be applied to managed namespaces
   value: managed-quota=true
