--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,11 +5,12 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:1.16.0-alpine
+FROM docker.io/nginxinc/nginx-unprivileged:1.20-alpine
 WORKDIR /app
 COPY --from=build /app/build /usr/share/nginx/html
-COPY --from=build /app/app . 
-RUN chgrp -R 0 /usr/share/nginx/html/env.js && \
-    chmod -R g=u /usr/share/nginx/html/env.js
+COPY --from=build /app/app .
+USER root
+RUN chgrp -R 0 /usr/share/nginx/html && \
+    chmod -R g=u /usr/share/nginx/html
 EXPOSE 3200
 CMD ["/app/run.sh"]
