--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -88,7 +88,7 @@ objects:
     - resourcequotas
     verbs:
     - get
-    - update
+    - patch
   - apiGroups:
     - user.openshift.io
     resources:
