--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -131,62 +131,24 @@ objects:
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
-    name: quota-management-client
+    name: quota-management
     namespace: ${NAMESPACE}
     labels:
-      app: quota-management-client
+      app: quota-management
   spec:
     replicas: 2
     selector:
       matchLabels:
-        app: quota-management-client
+        app: quota-management
     template:
       metadata:
         labels:
-          app: quota-management-client
-      spec:
-        containers:
-        - name: server
-          image: ${CLIENT_IMAGE}
-          ports:
-          - containerPort: 3200
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: ".1"
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 3200
-          env:
-          - name: BACKEND_ROUTE
-            value: "https://quota-management-server.${ROUTER_CANONICAL_HOSTNAME}"
-          - name: OAUTH_ENDPOINT
-            value: "https://${OAUTH_ENDPOINT}"
-          - name: OAUTH_CLIENT_ID
-            value: "${CLIENT_ID}"
-          imagePullPolicy: Always
-- apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    name: quota-management-server
-    namespace: ${NAMESPACE}
-    labels:
-      app: quota-management-server
-  spec:
-    replicas: 2
-    selector:
-      matchLabels:
-        app: quota-management-server
-    template:
-      metadata:
-        labels:
-          app: quota-management-server
+          app: quota-management
       spec:
         serviceAccountName: quota-manager
         containers:
-        - name: server
-          image: ${SERVER_IMAGE}
+        - name: quota-management
+          image: ${IMAGE}
           ports:
           - containerPort: 5000
           resources:
@@ -198,6 +160,10 @@ objects:
               path: /healthz
               port: 5000
           env:
+          - name: OAUTH_ENDPOINT
+            value: "https://${OAUTH_ENDPOINT}"
+          - name: OAUTH_CLIENT_ID
+            value: "${CLIENT_ID}"
           - name: QUOTA_SCHEME_FILE
             value: "/app/scheme.json"
           - name: MANAGED_NAMESPACE_LABEL_NAME
@@ -217,7 +183,7 @@ objects:
             mountPath: "/app/scheme.json"
             subPath: "scheme.json"
             readOnly: true
-          imagePullPolicy: Always
+          imagePullPolicy: "${PULL_POLICY}"
         volumes:
         - name: scheme
           configMap:
@@ -225,23 +191,11 @@ objects:
 - apiVersion: v1
   kind: Service
   metadata:
-    name: quota-management-client
+    name: quota-management
     namespace: ${NAMESPACE}
   spec:
     selector:
-      app: quota-management-client
-    ports:
-      - protocol: TCP
-        port: 3200
-        targetPort: 3200
-- apiVersion: v1
-  kind: Service
-  metadata:
-    name: quota-management-server
-    namespace: ${NAMESPACE}
-  spec:
-    selector:
-      app: quota-management-server
+      app: quota-management
     ports:
       - protocol: TCP
         port: 5000
@@ -249,30 +203,13 @@ objects:
 - kind: Route
   apiVersion: route.openshift.io/v1
   metadata:
-    name: quota-management-client
+    name: quota-management
     namespace: ${NAMESPACE}
   spec:
     host: quota-management.${ROUTER_CANONICAL_HOSTNAME}
     to:
       kind: Service
-      name: quota-management-client
-      weight: 100
-    port:
-      targetPort: 3200
-    tls:
-      termination: edge
-      insecureEdgeTerminationPolicy: Redirect
-    wildcardPolicy: None
-- kind: Route
-  apiVersion: route.openshift.io/v1
-  metadata:
-    name: quota-management-server
-    namespace: ${NAMESPACE}
-  spec:
-    host: quota-management-server.${ROUTER_CANONICAL_HOSTNAME}
-    to:
-      kind: Service
-      name: quota-management-server
+      name: quota-management
       weight: 100
     port:
       targetPort: 5000
@@ -310,11 +247,12 @@ parameters:
   value: "{}"
   name: USERNAME_FORMATTING
   required: true
-- description: Docker image to use for the UI
-  value: docker.io/vladpbr/quota-management-client:1.1
-  name: CLIENT_IMAGE
+- description: Docker image to use
+  value: docker.io/vladpbr/quota-management:1.1
+  name: IMAGE
   required: true
-- description: Docker image to use for the backend
-  value: docker.io/vladpbr/quota-management-server:1.1
-  name: SERVER_IMAGE
+
+- description: Pull policy for the image
+  value: IfNotPresent
+  name: PULL_POLICY
   required: true
