--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "npm": "^6.10.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "jsonschema": "1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
