--- a/deploy/quota-management-template.yaml
+++ b/deploy/quota-management-template.yaml
@@ -131,8 +131,8 @@ objects:
           - containerPort: 5000
           resources:
             requests:
-              memory: "64Mi"
-              cpu: ".1"
+              memory: "128Mi"
+              cpu: "50m"
           livenessProbe:
             httpGet:
               path: /healthz
