--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,30 @@
+attrs==21.2.0
+cachetools==4.2.4
+certifi==2021.10.8
+chardet==3.0.4
+click==8.0.3
 Flask==1.1.2
-itsdangerous==2.0.1
 gevent==21.1.2
-requests==2.22.0
+google-auth==2.3.3
+greenlet==1.1.2
+idna==2.8
+itsdangerous==2.0.1
+Jinja2==3.0.2
 jsonschema==3.2.0
 kubernetes==12.0.1
+MarkupSafe==2.0.1
+oauthlib==3.1.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
+urllib3==1.25.11
+websocket-client==1.2.1
+Werkzeug==2.0.2
+zope.event==4.5.0
+zope.interface==5.4.0
