--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "npm": "^6.10.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@mui/material": "^5.5.0",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@emotion/styled": "11.8.1",
+    "@emotion/react": "11.8.2",
+    "npm": "^8.3.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-scripts": "3.0.1",
     "jsonschema": "1.4.0"
   },
